PORTALS-2665 - Visual update for FacetPlotsCard - Use grid layout to ensure contents of each card are aligned across card - Add new FacetPlotLegendTable to be used in this card - Fix bug where FeaturedDataTabs sql would incorrectly override the inner plot config sql parameter (present in dhealth). - Convert stories to use mock data

--- a/packages/synapse-react-client/src/style/components/_facet-plots-card.scss
+++ b/packages/synapse-react-client/src/style/components/_facet-plots-card.scss
@@ -1,15 +1,8 @@
 @use '../abstracts/variables' as SRC;
 
 .FacetPlotsCard {
-  background-color: white;
   overflow: hidden;
-  &__titlebar {
-    min-height: 64px;
-    padding: 12px 25px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
+
   &__title {
     font-size: 16px;
     font-weight: bold;
@@ -26,7 +19,6 @@
     font-weight: bold;
   }
   &__body {
-    padding: 33px 44px;
     &__row {
       min-height: 130px;
     }
@@ -41,9 +33,7 @@
     }
     &__legend {
       margin-top: 10px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      width: 100%;
     }
     &__footer {
       display: flex;
@@ -53,9 +43,6 @@
     hr {
       margin: 33px 0px;
     }
-  }
-  &__loading {
-    min-height: 400px;
   }
   @media (max-width: map-get(SRC.$breakpoints, 'medium')) {
     margin: 15px 0px;
